--- a/index.html
+++ b/index.html
@@ -102,34 +102,35 @@
     </div>
   </section>
   <section class="white-section" id="Interests">
-    <h3 class="heading">My Interests in WebDev</h3>
-    <div class="row">  
-      <div class="interest-box col-lg-4 col-6">
-        <i class="fab fa-html5 fa-6x"></i>
-        <h3 class="interest">HTML5</h3>
-      </div>
-      <div class="interest-box col-lg-4 col-6">
-        <i class="fab fa-css3 fa-6x"></i>
-        <h3 class="interest">CSS3</h3>
-      </div>
-      <div class="interest-box col-lg-4 col-6">
-        <i class="fab fa-js fa-6x"></i>
-        <h3 class="interest">JavaScript</h3>
-      </div>
-      <div class="interest-box col-lg-4 col-6">
-        <i class="fab fa-bootstrap fa-6x"></i>
-        <h3 class="interest">Bootstrap</h3>
-      </div>
-      <div class="interest-box col-lg-4 col-6">
-        <i class="fab fa-node fa-6x"></i>
-        <h3 class="interest">Node.js</h3>
-      </div>
-      <div class="interest-box col-lg-4 col-6">
-        <i class="fab fa-react fa-6x"></i>
-        <h3 class="interest">React</h3>
-      </div>
-    </div>  
-
+    <div class="container-fluid">
+      <h3 class="heading">My Interests in WebDev</h3>
+      <div class="row">  
+        <div class="interest-box col-lg-4 col-6">
+          <i class="fab fa-html5 fa-6x"></i>
+          <h3 class="interest">HTML5</h3>
+        </div>
+        <div class="interest-box col-lg-4 col-6">
+          <i class="fab fa-css3 fa-6x"></i>
+          <h3 class="interest">CSS3</h3>
+        </div>
+        <div class="interest-box col-lg-4 col-6">
+          <i class="fab fa-js fa-6x"></i>
+          <h3 class="interest">JavaScript</h3>
+        </div>
+        <div class="interest-box col-lg-4 col-6">
+          <i class="fab fa-bootstrap fa-6x"></i>
+          <h3 class="interest">Bootstrap</h3>
+        </div>
+        <div class="interest-box col-lg-4 col-6">
+          <i class="fab fa-node fa-6x"></i>
+          <h3 class="interest">Node.js</h3>
+        </div>
+        <div class="interest-box col-lg-4 col-6">
+          <i class="fab fa-react fa-6x"></i>
+          <h3 class="interest">React</h3>
+        </div>
+      </div>  
+    </div>
   </section>  
   
   <section class="colored-section" id="Contact">
