Change colour and section

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <p>I have a passion for web design and love to create for web and mobile devices.Earlier I was interested in Android Development but in time I found out that Web Development career path is the right path for me and now I'm looking forward to have a stong hold in HTML,CSS & JavaScript.I'm also a big time Linux Enthusiast,I have used various Linux Distributions like Debian,Ubuntu,Fedora,Arch Linux etc.I would prefer Linux over Windows any day as long as I dont have a use with my NVIDIA Card.Android has been a thing for me for a while,I like to mess around with my device by flashing ROMs,rooting the device etc.</p>
     </div>
   </section>
-  <section class="white-section" id="Interests">
+  <section class="grey-section" id="Interests">
     <div class="container-fluid">
       <h3 class="heading">My Interests in WebDev</h3>
       <div class="row">  
