--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <section class="colored-section" id="#Home">
       <nav class="navbar navbar-expand-lg navbar-dark">
-      <img class="logo" src="Images/logo.svg">
+      <img class="logo" src="Images/logo.png">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
       </button>
