--- a/index.html
+++ b/index.html
@@ -58,9 +58,8 @@
       <h3 class="heading">About</h3>
       <div class="row">
         <div class="brief-intro">
-          <p>I have a passion for Web Development, I spend my whole day, practically every day, experimenting with HTML, CSS, and JavaScript; dabbling with Node.js.I’m curious and I enjoy work that challenges me to learn something new and stretch in
-            a different direction.Also I m a Linux Enthusiast, I have experience using various linux distributions like Debian,Ubuntu,Arch,Fedora etc.I was looking forward to be a Android Developer initially but then took a sharp turn into Web
-            Development side. </p>
+          <p>I have a passion for Web Development, I like experimenting with HTML, CSS, and JavaScript; dabbling with Node.js.I’m curious and I enjoy work that challenges me to learn something new and stretch in
+            a different direction.Also I m a Linux Enthusiast, I have experience using various linux distributions like Debian,Ubuntu,Arch,Fedora etc. </p>
         </div>
         <div class="skill-box col-lg-4 col-sm-6">
           <i class="icon fab fa-linux fa-4x"></i>
